# adventurer-sheet

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
.github/: ARCHITECTURE.md  IDEAS.md  PLAN-PHASE1.md  PLAN-PHASE2.md  PLAN-PHASE3.md  SETUP.md  copilot-instructions.md
.github/workflows/: backup.yml  ci.yml
scripts/: backup.py  bot.sh  restore.py
src/bot/: __init__.py  __main__.py  config.py  db.py  embeds.py  errors.py  repository.py  validators.py
src/bot/backup/: __init__.py  github_storage.py  service.py  storage.py
src/bot/cogs/: __init__.py  about.py  character.py  hello.py
tests/: conftest.py  seed.py  seed_data.csv  test_about.py  test_backup_github_storage.py  test_backup_service.py  test_character_cog.py  test_config.py  test_db.py  test_embeds.py  test_errors.py  test_hello.py  test_main.py  test_repository.py  test_seed.py  test_validators.py
