[project]
name = "adventurer-sheet"
version = "0.1.2"
description = "A D&D 5e character sheet Discord bot"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/bot"]

[tool.coverage.report]
show_missing = true
fail_under = 80

